working extension, with product extractor done with keyboard command

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,14 @@
   "content_scripts": [
     {
       "matches": ["*://*.instacart.com/*"],
-      "js": ["src/content.js"]
+      "js": ["src/content.js"],
+      "type": "module"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["src/utils/productExtractor.js"],
+      "matches": ["*://*.instacart.com/*"]
     }
   ],
   "options_page": "src/options/options.html",
