--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,16 @@
   "name": "Toxic Food Filter",
   "version": "1.0.0",
   "description": "Filter out products with potentially harmful ingredients on Instacart",
-  "permissions": ["storage", "activeTab"],
-  "host_permissions": ["*://*.instacart.com/*"],
+  "permissions": ["storage", "activeTab", "alarms", "identity"],
+  "host_permissions": [
+    "*://*.instacart.com/*",
+    "*://*.supabase.co/*",
+    "*://*.stripe.com/*",
+    "https://proxy-429279015209.us-central1.run.app/*"
+  ],
   "background": {
-    "service_worker": "src/background.js"
+    "service_worker": "src/background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
@@ -17,8 +23,8 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["src/content.js"],
-      "matches": ["*://*.instacart.com/*"]
+      "resources": ["src/content.js", "src/popup/auth-callback.html", "src/utils/authService.js"],
+      "matches": ["*://*.instacart.com/*", "*://*.supabase.co/*", "*://*.stripe.com/*"]
     }
   ],
   "options_page": "src/options/options.html",
@@ -26,6 +32,11 @@
     "default_popup": "src/popup/popup.html"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; worker-src 'self'"
+    "extension_pages": "script-src 'self'; object-src 'self'; worker-src 'self'",
+    "sandbox": "sandbox allow-scripts allow-forms allow-popups allow-modals; script-src 'self' 'unsafe-inline' 'unsafe-eval'; child-src 'self'"
+  },
+  "oauth2": {
+    "client_id": "${GOOGLE_CLIENT_ID}",
+    "scopes": ["https://www.googleapis.com/auth/userinfo.email", "https://www.googleapis.com/auth/userinfo.profile"]
   }
 }
