--- a/manifest.json
+++ b/manifest.json
@@ -3,28 +3,21 @@
   "name": "Toxic Food Filter",
   "version": "1.0.0",
   "description": "Filter out products with potentially harmful ingredients on Instacart",
-  "permissions": ["storage", "activeTab", "alarms", "identity"],
-  "host_permissions": [
-    "*://*.instacart.com/*",
-    "*://*.supabase.co/*",
-    "*://*.stripe.com/*",
-    "https://proxy-429279015209.us-central1.run.app/*"
-  ],
+  "permissions": ["storage", "activeTab", "alarms"],
+  "host_permissions": ["*://*.instacart.com/*"],
   "background": {
-    "service_worker": "src/background.js",
-    "type": "module"
+    "service_worker": "src/background.js"
   },
   "content_scripts": [
     {
       "matches": ["*://*.instacart.com/*"],
-      "js": ["src/content.js"],
-      "type": "module"
+      "js": ["src/content.js"]
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": ["src/content.js", "src/popup/auth-callback.html", "src/utils/authService.js"],
-      "matches": ["*://*.instacart.com/*", "*://*.supabase.co/*", "*://*.stripe.com/*"]
+      "resources": ["src/content.js"],
+      "matches": ["*://*.instacart.com/*"]
     }
   ],
   "options_page": "src/options/options.html",
@@ -32,11 +25,6 @@
     "default_popup": "src/popup/popup.html"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; worker-src 'self'",
-    "sandbox": "sandbox allow-scripts allow-forms allow-popups allow-modals; script-src 'self' 'unsafe-inline' 'unsafe-eval'; child-src 'self'"
-  },
-  "oauth2": {
-    "client_id": "${GOOGLE_CLIENT_ID}",
-    "scopes": ["https://www.googleapis.com/auth/userinfo.email", "https://www.googleapis.com/auth/userinfo.profile"]
+    "extension_pages": "script-src 'self'; object-src 'self'; worker-src 'self'"
   }
 }
