--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf dist/*"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.1",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
