--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -2,7 +2,7 @@
 # https://supabase.com/docs/guides/local-development/cli/config
 # A string used to distinguish different Supabase projects on the same host. Defaults to the
 # working directory name when running `supabase init`.
-project_id = "test"
+project_id = "toxic-food-filter-v2"
 
 [api]
 enabled = true
@@ -254,8 +254,6 @@ inspector_port = 8083
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
 # entrypoint = "./functions/MY_FUNCTION_NAME/index.ts"
-[functions.stripe-manage]
-entrypoint = './functions/stripe-manage/index.js' 
 [functions.stripe-webhook]
 entrypoint = './functions/stripe-webhook/index.js' 
 
