--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toxic-food-filter",
+  "name": "clean-cart",
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --mode production",
