--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -255,7 +255,10 @@ inspector_port = 8083
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
 # entrypoint = "./functions/MY_FUNCTION_NAME/index.ts"
 [functions.stripe-webhook]
-entrypoint = './functions/stripe-webhook/index.js' 
+entrypoint = './functions/stripe-webhook/index.js'
+
+[functions.handle-products]
+entrypoint = './functions/handle-products/index.js'
 
 [analytics]
 enabled = true
