--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "Clean Cart",
   "version": "1.0.0",
   "description": "Filter out products with potentially harmful ingredients on Instacart",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "permissions": ["storage", "activeTab"],
   "host_permissions": ["*://*.instacart.com/*", "*://*.supabase.co/*"],
   "background": {
